fix proper schema usage + remove nosql support as unused