@@ -22,7 +22,6 @@ import java.io.File;
 import org.hortonmachine.dbs.geopackage.GeopackageGeometryParser;
 import org.hortonmachine.dbs.h2gis.H2GisGeometryParser;
 import org.hortonmachine.dbs.h2gis.H2SyntaxHelper;
-import org.hortonmachine.dbs.nosql.INosqlDb;
 import org.hortonmachine.dbs.postgis.PGSyntaxHelper;
 import org.hortonmachine.dbs.postgis.PostgisGeometryParser;
 import org.hortonmachine.dbs.spatialite.SpatialiteCommonMethods;
@@ -38,27 +37,25 @@ import org.hortonmachine.dbs.utils.SqlName;
  */
 public enum EDb {
     SQLITE(0, ".sqlite", "sqlite", "org.hortonmachine.dbs.spatialite.hm.SqliteDb", false,
-            "org.hortonmachine.dbs.spatialite.SpatialiteSqlTemplates", "jdbc:sqlite:", false, false, false, true, false), //
+            "org.hortonmachine.dbs.spatialite.SpatialiteSqlTemplates", "jdbc:sqlite:", false, false, false, true), //
     MBTILES(0, ".mbtiles", "mbtiles", "org.hortonmachine.dbs.spatialite.hm.SqliteDb", false,
-            "org.hortonmachine.dbs.spatialite.SpatialiteSqlTemplates", "jdbc:sqlite:", false, false, false, true, false), //
+            "org.hortonmachine.dbs.spatialite.SpatialiteSqlTemplates", "jdbc:sqlite:", false, false, false, true), //
     SPATIALITE(1, ".sqlite", "sqlite", "org.hortonmachine.dbs.spatialite.hm.SpatialiteThreadsafeDb", true,
-            "org.hortonmachine.dbs.spatialite.SpatialiteSqlTemplates", "jdbc:sqlite:", false, false, false, true, false), //
+            "org.hortonmachine.dbs.spatialite.SpatialiteSqlTemplates", "jdbc:sqlite:", false, false, false, true), //
     H2(2, "", "mv.db", "org.hortonmachine.dbs.h2gis.H2Db", false, "org.hortonmachine.dbs.h2gis.H2GisSqlTemplates", "jdbc:h2:",
-            true, true, false, true, false), //
+            true, true, false, true), //
     H2GIS(3, "", "mv.db", "org.hortonmachine.dbs.h2gis.H2GisDb", true, "org.hortonmachine.dbs.h2gis.H2GisSqlTemplates",
-            "jdbc:h2:", true, true, false, true, false), //
+            "jdbc:h2:", true, true, false, true), //
     SPATIALITE4ANDROID(4, ".sqlite", "sqlite", "org.hortonmachine.dbs.spatialite.android.GPSpatialiteDb", true,
-            "org.hortonmachine.dbs.spatialite.SpatialiteSqlTemplates", "", false, false, true, false, false), //
+            "org.hortonmachine.dbs.spatialite.SpatialiteSqlTemplates", "", false, false, true, false), //
     POSTGRES(5, "", "", "org.hortonmachine.dbs.postgis.PGDb", false, "org.hortonmachine.dbs.postgis.PGSqlTemplates",
-            "jdbc:postgresql://", true, true, false, false, false), //
+            "jdbc:postgresql://", true, true, false, false), //
     POSTGIS(6, "", "", "org.hortonmachine.dbs.postgis.PostgisDb", true, "org.hortonmachine.dbs.postgis.PostgisSqlTemplates",
-            "jdbc:postgresql://", true, true, false, false, false), //
+            "jdbc:postgresql://", true, true, false, false), //
     GEOPACKAGE(7, ".gpkg", "gpkg", "org.hortonmachine.dbs.geopackage.hm.GeopackageDb", true,
-            "org.hortonmachine.dbs.geopackage.GeopackageSqlTemplates", "jdbc:sqlite:", false, false, true, true, false), //
+            "org.hortonmachine.dbs.geopackage.GeopackageSqlTemplates", "jdbc:sqlite:", false, false, true, true), //
     GEOPACKAGE4ANDROID(8, ".gpkg", "gpkg", "org.hortonmachine.dbs.geopackage.android.GPGeopackageDb", true,
-            "org.hortonmachine.dbs.geopackage.GeopackageSqlTemplates", "", false, false, true, false, false), //
-    MONGODB(9, "", "", "org.hortonmachine.dbs.nosql.mongodb.MongoDb", false,
-            "org.hortonmachine.dbs.nosql.mongodb.MongoSqlTemplates", "", true, true, false, false, true), //
+            "org.hortonmachine.dbs.geopackage.GeopackageSqlTemplates", "", false, false, true, false), //
     ; //
 
     private int _code;
@@ -73,7 +70,6 @@ public enum EDb {
     private boolean _supportsMobile;
     private boolean _supportsDesktop;
     private ASqlTemplates sqlTemplates;
-    private boolean _isNosql;
 
     /**
      * @param code db code.
@@ -87,11 +83,10 @@ public enum EDb {
      * @param supportsServerMode if the db supports server mode.
      * @param supportsMobile if the db can be run on mobile devices.
      * @param supportsDesktop if the db supports file based desktop mode (i.e. without server).
-     * @param isNosql if it is a nosql db.
      */
     private EDb( int code, String extensionOnCreation, String extension, String dbClassName, boolean isSpatial,
             String sqlTemplatesClassName, String jdbcPrefix, boolean supportsPwd, boolean supportsServerMode,
-            boolean supportsMobile, boolean supportsDesktop, boolean isNosql ) {
+            boolean supportsMobile, boolean supportsDesktop ) {
         this._code = code;
         this._extensionOnCreation = extensionOnCreation;
         this._extension = extension;
@@ -103,11 +98,10 @@ public enum EDb {
         this._supportsServerMode = supportsServerMode;
         this._supportsMobile = supportsMobile;
         this._supportsDesktop = supportsDesktop;
-        this._isNosql = isNosql;
     }
 
     public static EDb[] getSpatialTypesDesktop() {
-        return new EDb[]{SQLITE, MBTILES, H2GIS, GEOPACKAGE, SPATIALITE, POSTGIS, MONGODB};
+        return new EDb[]{SQLITE, MBTILES, H2GIS, GEOPACKAGE, SPATIALITE, POSTGIS};
     }
 
     public static EDb[] getSpatialTypesMobile() {
@@ -159,10 +153,6 @@ public enum EDb {
         return _isSpatial;
     }
 
-    public boolean isNosql() {
-        return _isNosql;
-    }
-
     /**
      * Get a new instance of the spatial database version.
      * 
@@ -172,7 +162,7 @@ public enum EDb {
     public ASpatialDb getSpatialDb() throws Exception {
         if (_isSpatial) {
             Class< ? > forName = Class.forName(_dbClassName);
-            Object newInstance = forName.newInstance();
+            Object newInstance = forName.getDeclaredConstructor().newInstance();
             if (newInstance instanceof ASpatialDb) {
                 return (ASpatialDb) newInstance;
             }
@@ -188,21 +178,10 @@ public enum EDb {
      */
     public ADb getDb() throws Exception {
         Class< ? > forName = Class.forName(_dbClassName);
-        Object newInstance = forName.newInstance();
+        Object newInstance = forName.getDeclaredConstructor().newInstance();
         return (ADb) newInstance;
     }
 
-    /**
-     * Get a new instance of the nosql database.
-     * 
-     * @return the database instance.
-     * @throws Exception
-     */
-    public INosqlDb getNosqlDb() throws Exception {
-        Class< ? > forName = Class.forName(_dbClassName);
-        Object newInstance = forName.newInstance();
-        return (INosqlDb) newInstance;
-    }
 
     /**
      * Get a new instance of the sql templates.
@@ -213,7 +192,7 @@ public enum EDb {
     public ASqlTemplates getSqlTemplates() throws Exception {
         if (sqlTemplates == null) {
             Class< ? > forName = Class.forName(_sqlTemplatesClassName);
-            Object newInstance = forName.newInstance();
+            Object newInstance = forName.getDeclaredConstructor().newInstance();
             sqlTemplates = (ASqlTemplates) newInstance;
         }
         return sqlTemplates;
